Implemented feedback: changed method/return types and changed AddTransient to AddScoped. Started working on hour registration

--- a/TicketSystemWeb/Views/Shared/_Layout.cshtml
+++ b/TicketSystemWeb/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
 
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Ticket" asp-action="Index">Urenregistratie</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="HourRegistration" asp-action="Index">Urenregistratie</a>
 
                         </li>
                     </ul>
