--- a/TicketSystemWeb/Views/Ticket/Index.cshtml
+++ b/TicketSystemWeb/Views/Ticket/Index.cshtml
@@ -141,3 +141,7 @@
         }
     </tbody>
 </table>
+<div class="col-6">
+    <h2 class="text-primary">Archief</h2>
+    <p>Zie reeds gesloten tickets</p>
+</div>
