--- a/TicketSystemWeb/Views/Shared/_Layout.cshtml
+++ b/TicketSystemWeb/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - TicketSystemWeb</title>
+    <title>@ViewData["Title"] - Ticket System</title>
     <link rel="stylesheet" href="~/css/bootswatchtheme.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
@@ -35,18 +35,26 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Device" asp-action="Index">Apparaten</a>
 
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="HourRegistration" asp-action="Index">Urenregistratie</a>
+                        @if (TempData.ContainsKey("administrator"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="HourRegistration" asp-action="Index">Urenregistratie</a>
 
-                        </li>
+                            </li>
+                        }
                     </ul>
                     @*<form class="d-flex">
                         <input class="form-control me-sm-2" type="text" placeholder="Zoeken">
                         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Zoeken</button>
                         </form>*@
-                    <button style="margin-right: 10px;" class="btn btn-success my-2 my-sm-0" type="submit">Inloggen</button>
-                    <button class="btn btn-danger my-2 my-sm-0" type="submit">Uitloggen</button>
-
+                    @if (!TempData.ContainsKey("employee"))
+                    {
+                        <a asp-area="" asp-controller="Account" asp-action="Index" style="margin-right: 10px;" class="btn btn-success my-2 my-sm-0">Inloggen</a>
+                    }
+                    @if (TempData.ContainsKey("employee") || TempData.ContainsKey("administrator"))
+                    {
+                        <a asp-area="" asp-controller="Account" asp-action="Logout" class="btn btn-danger my-2 my-sm-0">Uitloggen</a>
+                    }
                 </div>
             </div>
         </nav>
