--- a/TicketSystemWeb/Views/Ticket/Index.cshtml
+++ b/TicketSystemWeb/Views/Ticket/Index.cshtml
@@ -47,12 +47,18 @@
             <th>
                 Bekijken
             </th>
-            <th>
-                Bewerken
-            </th>
-            <th>
-                Verwijderen
-            </th>
+            @if (TempData.ContainsKey("employee") || TempData.ContainsKey("administrator"))
+            {
+                <th>
+                    Bewerken
+                </th>
+            }
+            @if (TempData.ContainsKey("employee") || TempData.ContainsKey("administrator"))
+            {
+                <th>
+                    Verwijderen
+                </th>
+            }
         </tr>
     </thead>
     <tbody>
@@ -127,16 +133,22 @@
                         <a asp-controller="Ticket" asp-action="View" asp-route-ticketId="@obj.TicketId" class="btn btn-primary"><i class="bi bi-eye-fill"></i>Bekijken</a>
                     </div>
                 </td>
-                <td>
-                    <div class="w-75 btn-group" role="group">
-                        <a asp-controller="Ticket" asp-action="Edit" asp-route-ticketId="@obj.TicketId" class="btn btn-primary"><i class="bi bi-pen-fill"></i>Bewerken</a>
-                    </div>
-                </td>
-                <td>
-                    <div class="w-75 btn-group" role="group">
-                        <a asp-controller="Ticket" asp-action="Delete" asp-route-ticketId="@obj.TicketId" class="btn btn-primary"><i class="bi bi-trash-fill"></i>Verwijderen</a>
-                    </div>
-                </td>
+                    @if (TempData.ContainsKey("employee") || TempData.ContainsKey("administrator"))
+                    {
+                    <td>
+                        <div class="w-75 btn-group" role="group">
+                            <a asp-controller="Ticket" asp-action="Edit" asp-route-ticketId="@obj.TicketId" class="btn btn-primary"><i class="bi bi-pen-fill"></i>Bewerken</a>
+                        </div>
+                    </td>
+                    }
+                    @if (TempData.ContainsKey("employee") || TempData.ContainsKey("administrator"))
+                    {
+                    <td>
+                        <div class="w-75 btn-group" role="group">
+                            <a asp-controller="Ticket" asp-action="Delete" asp-route-ticketId="@obj.TicketId" class="btn btn-primary"><i class="bi bi-trash-fill"></i>Verwijderen</a>
+                        </div>
+                    </td>
+                    }
             </tr>
         }
     </tbody>
