--- a/TicketSystemWeb/Views/Shared/_Layout.cshtml
+++ b/TicketSystemWeb/Views/Shared/_Layout.cshtml
@@ -42,6 +42,13 @@
 
                             </li>
                         }
+                        @if (TempData.ContainsKey("administrator") || TempData.ContainsKey("employee"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Info">Mijn account</a>
+
+                            </li>
+                        }
                     </ul>
                     @*<form class="d-flex">
                         <input class="form-control me-sm-2" type="text" placeholder="Zoeken">
