--- a/TicketSystemWeb/Views/Ticket/Create.cshtml
+++ b/TicketSystemWeb/Views/Ticket/Create.cshtml
@@ -41,18 +41,18 @@
                 <span asp-validation-for="TicketPriority" class="text-danger"></span>
             </div>
         </div>
-@*        <div class="row">
+        <div class="row">
             <span>Kies betrokken apparaten</span>
             <div class="col-sm-3">
                 <select class="js-example-basic-single" name="state">
-                    @foreach (var obj in Model.Devices)
+                    @foreach (var device in Model.Devices)
                     {
-                        <option>@obj.DeviceId</option>
-                        <option>@obj.DeviceName</option>
+                        <option>Samsung Galaxy S8</option>
+                        <option>Dell XPS 15 9570</option>
                     }
                 </select>
             </div>
-        </div>*@
+        </div>
     </div>
     <br />
     <button type="submit" class="btn btn-primary" style="width: 150px">Ticket aanmaken</button>
