--- a/TicketSystemWeb/Views/Shared/_Layout.cshtml
+++ b/TicketSystemWeb/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
                         @if (TempData.ContainsKey("administrator") || TempData.ContainsKey("employee"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Info">Mijn account</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Info">Accounts</a>
 
                             </li>
                         }
