--- a/TicketSystemWeb/Views/Ticket/Edit.cshtml
+++ b/TicketSystemWeb/Views/Ticket/Edit.cshtml
@@ -60,6 +60,19 @@
                 </div>
             </div>
             <br />
+            <div class="row">
+                <span>Medewerker toewijzen</span>
+                <div class="col-sm-3">
+                    <select asp-for="ResponsibleEmployee" class="form-control">
+
+                        @foreach (var employee in Model.Employees)
+                        {
+                            <option value="@employee.EmployeeId">@employee.FirstName @employee.LastName</option>
+                        }
+                    </select>
+                </div>
+            </div>
+            <br />
         }
         <button type="submit" class="btn btn-primary" style="width: 150px">Ticket bewerken</button>
         <a asp-controller="Ticket" asp-action="Index" class="btn btn-secondary" style="width: 150px">Terug naar overzicht</a>
