--- a/TicketSystemWeb/Views/Ticket/View.cshtml
+++ b/TicketSystemWeb/Views/Ticket/View.cshtml
@@ -133,7 +133,7 @@
             <div class="card-body">
                 <label asp-for="TicketSubject">Opmerking</label>
                 <textarea disabled asp-for="@obj.CommentContent" class="form-control" rows="7"></textarea>
-                <p>Geplaatst door: Henk (@obj.CreatedDateTime)</p>
+                <p>Geplaatst door: Gebruiker (@obj.CreatedDateTime)</p>
                 <button type="submit" class="btn btn-danger" style="width: 150px">Verwijderen</button>
             </div>
         </div>
