--- a/TicketSystemWeb/Views/Ticket/Create.cshtml
+++ b/TicketSystemWeb/Views/Ticket/Create.cshtml
@@ -13,17 +13,17 @@
         </div>
         <div asp-validation-summary="All"></div>
         <div class="mb-3">
-            <label asp-for="TicketSubject">Onderwerp</label>
+            <label asp-for="TicketSubject">Onderwerp (*)</label>
             <input asp-for="TicketSubject" class="form-control" />
             <span asp-validation-for="TicketSubject" class="text-danger"></span>
         </div>
         <div class="mb-3">
-            <label asp-for="TicketContent">Probleemomschrijving</label>
+            <label asp-for="TicketContent">Probleemomschrijving (*)</label>
             <textarea asp-for="TicketContent" class="form-control" rows="7"></textarea>
             <span asp-validation-for="TicketContent" class="text-danger"></span>
         </div>
         <div class="row">
-            <span asp-for="ticketCategory">Categorie</span>
+            <span asp-for="ticketCategory">Categorie (*)</span>
             <div class="col-sm-3">
                 <select asp-for="TicketCategory" asp-items="Html.GetEnumSelectList<TicketCategories>()" class="form-control">
                     <option selected="selected" value="">Kies een categorie</option>
@@ -33,7 +33,7 @@
         </div>
         <br />
         <div class="row">
-            <span asp-for="ticketPriority">Prioriteit</span>
+            <span asp-for="ticketPriority">Prioriteit (*)</span>
             <div class="col-sm-3">
                 <select asp-for="TicketPriority" asp-items="Html.GetEnumSelectList<TicketPriorities>()" class="form-control">
                     <option selected="selected" value="">Kies een prioriteit</option>
@@ -43,7 +43,7 @@
         </div>
         <br />
         <div class="row">
-            <span>Kies betrokken apparaten</span>
+            <span>Kies betrokken apparaat</span>
             <div class="col-sm-3">
                 @Html.DropDownListFor(n => n.DeviceId, new SelectList(ViewBag.Devices, "DeviceId", "DeviceName"), "Kies een apparaat", htmlAttributes: new { @class = "form-control" })
             </div>
